# otus_project_work

./: docker-compose.yaml
barrier-backend/: .dockerignore  Cargo.toml  Dockerfile  config.toml.example  shell.nix
barrier-backend/src/: config.rs  main.rs  structs.rs  tests.rs
barrier-backend/src/middleware/: token.rs
barrier-backend/src/services/: auth.rs  db.rs  gate.rs  jwt.rs  mod.rs
barrier-frontend/: .dockerignore  Dockerfile  README.md  package.json  shell.nix  tailwind.config.js  tsconfig.json  vue.config.js
barrier-frontend/nginx_config/: default.conf
barrier-frontend/public/: index.html
barrier-frontend/src/: App.vue  shims-vuex.d.ts
barrier-frontend/src/components/: LockButton.vue  NavBar.vue
barrier-frontend/src/router/: index.ts
barrier-frontend/src/services/: api.ts
barrier-frontend/src/store/: index.ts
barrier-frontend/src/views/: HomeView.vue  LoginView.vue
