[package]
name = "barrier-backend"
version = "0.0.1"
authors = ["Maxim Zhukov <mussitantesmortem@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-service = "2"
actix-web = "4"
async-trait = "0.1"
chrono = "0.4"
derive_more = "0.99"
dirs = "4"
flexi_logger = "0.22"
futures = "0.3"
jwt-simple = "0.10"
log = "0.4"
mongodb = "2"
reqwest = "0.11"
serde = "1"
serde_json = "1"
simple-xml-builder = "1"
toml = "0.5"
tokio = { version = "1", features = ["sync"] }
uuid = { version = "0.8", features = ["v4"] }
openldap = "1.2"

[dev-dependencies]
actix-rt = "2"
pretty_assertions = "1"
